2009-09-05  Mike Frysinger  <vapier@gentoo.org>

	* NEWS, src/userdel.c, src/lastlog.c, src/gpasswd.c,
	src/newusers.c, src/chpasswd.c, src/groupmems.c, src/usermod.c,
	src/chgpasswd.c, src/vipw.c, src/su.c, src/useradd.c,
	src/groupmod.c, src/passwd.c, src/groupadd.c, src/chage.c,
	src/faillog.c, src/chsh.c: If someone uses the -h/--help options,
	the usage should not go to stderr nor should the utility exit with
	non-zero status. All of the shadow utils do just this
	unfortunately, so convert them over to sanity.
	* man/groupmems.8.xml, man/gpasswd.1.xml: Added option -h/--help.

2009-09-05  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Fixed wrong format string.
	* lib/gshadow.c: Removed declaration of unused variable.

2009-08-30  Mike Frysinger  <vapier@gentoo.org>

	* man/generate_mans.mak, man/generate_translations.mak: Provide an
	useful error message when --enable-man is not enabled and the
	translated manpages are not generated.

2009-08-21  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/ENCRYPT_METHOD.xml: Avoid using sub-lists. They
	break the groff formatting.

2009-07-24  Nicolas François  <nicolas.francois@centraliens.net>

	* po/fr.po: Fix typos, based on reviews by the Debian French
	translation team.

2009-07-24  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, configure.in: Prepare for the next release 4.1.4.2.
	* po/shadow.pot, man/po/shadow-man-pages.pot: Regenerated.
	* po/*.po, man/po/*.po: Updated PO files.

2009-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Fixed definition of the SHELL configuration.

2009-07-23  Nicolas François  <nicolas.francois@centraliens.net>

	* etc/login.defs: SYS_GID_MIN /SYS_UID_MIN changed from 100 to
	101. GID 100 seems to be used statically.

2009-07-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/shell.c, src/su.c: Execute the scripts with "sh -"
	rather than "sh".
