@@ -130,27 +130,25 @@ static void log_gpasswd_success_gshadow (unused void *arg);
  */
 static void usage (int status)
 {
-	fprintf (status ? stderr : stdout,
-	         _("Usage: %s [option] GROUP\n"
-	           "\n"
-	           "Options:\n"
-	           "  -a, --add USER                add USER to GROUP\n"
-	           "  -d, --delete USER             remove USER from GROUP\n"
-	           "  -h, --help                    display this help message and exit\n"
-	           "  -r, --remove-password         remove the GROUP's password\n"
-	           "  -R, --restrict                restrict access to GROUP to its members\n"
-	           "  -M, --members USER,...        set the list of members of GROUP\n"
-	           "%s\n"
-	           "\n"),
-	         Prog,
+	FILE *usageout = status ? stderr : stdout;
+	(void) fprintf (usageout,
+	                _("Usage: %s [option] GROUP\n"
+	                  "\n"
+	                  "Options:\n"),
+	                Prog);
+	(void) fputs (_("  -a, --add USER                add USER to GROUP\n"), usageout);
+	(void) fputs (_("  -d, --delete USER             remove USER from GROUP\n"), usageout);
+	(void) fputs (_("  -h, --help                    display this help message and exit\n"), usageout);
+	(void) fputs (_("  -r, --remove-password         remove the GROUP's password\n"), usageout);
+	(void) fputs (_("  -R, --restrict                restrict access to GROUP to its members\n"), usageout);
+	(void) fputs (_("  -M, --members USER,...        set the list of members of GROUP\n"), usageout);
 #ifdef SHADOWGRP
-	         _("  -A, --administrators ADMIN,...\n"
-	           "                                set the list of administrators for GROUP\n"
-	           "Except for the -A and -M options, the options cannot be combined.\n")
+	(void) fputs (_("  -A, --administrators ADMIN,...\n"
+	                "                                set the list of administrators for GROUP\n"), usageout);
+	(void) fputs (_("Except for the -A and -M options, the options cannot be combined.\n"), usageout);
 #else
-	         _("The options cannot be combined.\n")
+	(void) fputs (_("The options cannot be combined.\n"), usageout);
 #endif
-	        );
 	exit (status);
 }
 
