@@ -1,3 +1,8 @@
+2009-09-05  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* src/gpasswd.c, src/groupmems.c: Split the groupmems and gpasswd
+	Usage string. It was changed anyway to add the --help option.
+
 2009-09-05  Mike Frysinger  <vapier@gentoo.org>
 
 	* NEWS, src/userdel.c, src/lastlog.c, src/gpasswd.c,
